# moonshine

./: README.md  download_mini_speech_commands.py  main.ipynb  model.py  pyproject.toml
model/: __init__.py  decoders.py  encoders.py  moonshine.py  preprocessor.py  transformer.py
