[project]
name = "moonshine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchtune>=0.6.1",
    "torchvision>=0.22.0",
    "useful-moonshine-onnx",
]

[tool.uv.sources]
useful-moonshine-onnx = { git = "https://github.com/usefulsensors/moonshine.git", subdirectory = "moonshine-onnx" }
